--- a/src/main/resources/templates/shoppingCart.html
+++ b/src/main/resources/templates/shoppingCart.html
@@ -8,7 +8,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <title>E-commerce application</title>
-
+<base href="/">
 <!-- Bootstrap CSS  & FontAwsome-->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="font-awesome/css1/all.css" rel="stylesheet">
@@ -16,6 +16,7 @@
 <link rel="icon" href="images/icon.png" />
 <!-- Our Custom CSS -->
 <link rel="stylesheet" href="style4.css">
+<link rel="stylesheet" href="cart.css">
 <link rel="stylesheet" href="card.css">
 <script type="text/javascript" src="font-awesome/js1/fontawesome.js"></script>
 <script type="text/javascript" src=""></script>
@@ -84,7 +85,7 @@
 						<ul class="nav navbar-nav ml-auto">
 							<li class="nav-item"><a class="nav-link fl1" href="#"> <i
 									class="fas fa-cart-plus" title="View Cart"
-									style="color: red; font-size: 20px"></i><span class="label">10</span>
+									style="color: red; font-size: 20px"></i><span class="label">[[${shoppingCart.itemsNumber}]]</span>
 							</a></li>
 							<li class="nav-item"><a class="nav-link fl2" href="#"> <i
 									class="fa fa-user" style="color: #17a2b8; font-size: 20px"></i>
@@ -254,7 +255,6 @@
 															<input type="number" class="form-control-sm input-filter"
 																name="price" placeholder="price" />
 														</div>
-
 													</div>
 													<button type="submit"
 														class="btn btn-outline-success btn-sm form-control">search</button>
@@ -271,270 +271,106 @@
 					<div class="col-md-9">
 						<div class="row g-2">
 
-							<div class="col-md-4 mb-2" th:each="product : ${products}">
-								<div class="product py-4">
-									<span class="off bg-success">-
-										[[${product.discount.discount}]]% OFF</span>
-									<div class="text-center">
-										<img th:src="*{'data:image/jpeg;base64,'+{product.image}}"
-											width="200">
-									</div>
-									<div class="about text-center">
-										<h5>[[${product.name}]]</h5>
-										<span>$[[${product.price}]]</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase"  data-toggle="modal" th:attr="data-target='#exampleModalCenter'+*{product.id}">Add to
-											cart</button>
-
-										<!-- Modal -->
-										<div class="modal fade" th:id="*{'exampleModalCenter'+{product.id}}"
-											data-backdrop="static" data-keyboard="false" tabindex="-1"
-											aria-labelledby="staticBackdropLabel" aria-hidden="true">
-											<div class="modal-dialog modal-dialog-centered">
-												<div class="modal-content">
-													<div class="modal-header">
-														<h5 class="modal-title" id="staticBackdropLabel">add to cart</h5>
-														<button type="button" class="close" data-dismiss="modal"
-															aria-label="Close">
-															<span aria-hidden="true">&times;</span>
-														</button>
+							<div class="table-responsive shopping-cart" style="background-color: #fff">
+								<table class="table">
+									<thead>
+										<tr>
+											<th>Product Name</th>
+											<th class="text-center">Quantity</th>
+											<th class="text-center">Subtotal</th>
+											<th class="text-center">Discount</th>
+											<th class="text-center"><a
+												class="btn btn-sm btn-outline-danger" href="#">Clear
+													Cart</a></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr th:each="cartItem : ${shoppingCart.items}">
+											<td>
+												<div class="product-item">
+													<a class="product-thumb" href="#"><img
+														th:src="*{'data:image/jpeg;base64,'+{cartItem.product.image}}"
+														alt="Product"></a>
+													<div class="product-info">
+														<h4 class="product-title">
+															<a href="#">[[${cartItem.product.name}]]</a>
+														</h4>
+														<span><em>Price:</em>$[[${cartItem.product.price}]] </span>
+															
 													</div>
-													<div class="modal-body">
-													
-														<div class="card" >
-															<img th:src="*{'data:image/jpeg;base64,'+{product.image}}" height="250px" class="card-img-top" alt="...">
-															<div class="card-body">
-															 <form action="/addToCart" method="POSt">
-															 <input type="hidden" name="id" th:value="${product.id}"/>
-															  <input type="number" min="1" value="1" name="quantity" class="form-control" placeholder="quantity" />
-															  <button type="submit" class="btn btn-primary mt-2"> submit</button>
-															 </form>
-															</div>
-														</div>
-													</div>
-
 												</div>
-											</div>
-										</div>
-
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<a th:href="@{/detail/{id}(id = ${product.id})}"
-												class="product_fav"><i class="fab fa-opencart"></i></a>
-										</div>
-									</div>
+											</td>
+											<td class="text-center">
+												<div class="count-input">
+													<select class="form-control">
+														<option th:value="${cartItem.quantity}" selected="selected">[[${cartItem.quantity}]]</option>
+														<option value="1">1</option>
+														<option value="2">2</option>
+														<option value="3">3</option>
+														<option value="4">4</option>
+														<option value="5">5</option>
+														<option value="6">6</option>
+														<option value="7">7</option>
+													</select>
+													
+												</div>
+											</td>
+											<td class="text-center text-lg text-medium">$[[${cartItem.product.price}]]</td>
+											<td class="text-center text-lg text-medium">$[[${cartItem.product.discount.discount}]]</td>
+											<td class="text-center"><a class="remove-from-cart"
+												href="#" data-toggle="tooltip" title=""
+												data-original-title="Remove item"><i class="fa fa-trash"></i></a></td>
+										</tr>
+										
+									</tbody>
+								</table>
+							</div>
+							<div class="shopping-cart-footer">
+								<div class="column">
+									<form class="coupon-form" method="post">
+										<input class="form-control form-control-sm" type="text"
+											placeholder="Coupon code" required="">
+										<button class="btn btn-outline-primary btn-sm" type="submit">Apply
+											Coupon</button>
+									</form>
+								</div>
+								<div class="column text-lg">
+									<b>Subtotal:  <span class="text-medium">$[[${shoppingCart.totalPrice}]]</span></b>
+								</div>
+							</div>
+							<div class="shopping-cart-footer">
+								<div class="column">
+									<a class="btn btn-outline-secondary back" href="/"><i
+										class="fas fa-arrow-left"></i>&nbsp;Back to Shopping</a>
+								</div>
+								<div class="column cart-button">
+									<button class="btn btn-primary" href="#" data-toast=""
+										data-toast-type="success" data-toast-position="topRight"
+										data-toast-icon="icon-circle-check"
+										data-toast-title="Your cart"
+										data-toast-message="is updated successfully!">Update Cart</button>
+										<a class="btn checkout btn-success" href="#">Checkout</a>
 								</div>
 							</div>
 
-
-
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<span class="off bg-success">-25% OFF</span>
-									<div class="text-center">
-										<img src="https://i.imgur.com/nOFet9u.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>XRD Active Shoes</h5>
-										<span>$1,999.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<span class="off bg-warning">SALE</span>
-									<div class="text-center">
-										<img src="https://i.imgur.com/VY0R9aV.png" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Hygen Smart watch</h5>
-										<span>$123.43</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4  mb-2">
-								<div class="product py-4">
-									<div class="text-center">
-										<img src="https://i.imgur.com/PSGrLdz.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Acer surface book 2.5</h5>
-										<span>$1,999.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<span class="off bg-success">-10% OFF</span>
-									<div class="text-center">
-										<img src="https://i.imgur.com/OdRSpXG.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Dell XPS Surface</h5>
-										<span>$1,245.89</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<!-- <span class="off bg-success">-25% OFF</span> -->
-									<div class="text-center">
-										<img src="https://i.imgur.com/X2AwTCY.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Acer surface book 5.5</h5>
-										<span>$2,999.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<span class="off bg-success">-5% OFF</span>
-									<div class="text-center">
-										<img src="https://i.imgur.com/QQwcBpF.png" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Xps smart watch 5.0</h5>
-										<span>$999.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<span class="off bg-warning">SALE</span>
-									<div class="text-center">
-										<img src="https://i.imgur.com/PSGrLdz.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Acer surface book 8.5</h5>
-										<span>$3,999.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<div class="text-center">
-										<img src="https://i.imgur.com/m22OQy9.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Tyko Running shoes</h5>
-										<span>$99.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<div class="text-center">
-										<img src="https://i.imgur.com/OdRSpXG.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Dell surface book 5</h5>
-										<span>$1,999.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
 						</div>
 					</div>
+
 				</div>
-
+				<div class="line"></div>
 			</div>
-			<div class="line"></div>
 		</div>
-	</div>
-	<!-- Bootstrap JS & jQuery -->
-	<script src="js/jquery-3.1.1.min.js"></script>
-	<script src="js/bootstrap.js"></script>
-	<!-- Popper.JS -->
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
-		integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
-		crossorigin="anonymous"></script>
-	<script type="text/javascript" src="api/ajaxFetch.js"></script>
+		<!-- Bootstrap JS & jQuery -->
+		<script src="js/jquery-3.1.1.min.js"></script>
+		<script src="js/bootstrap.js"></script>
+		<!-- Popper.JS -->
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+			integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+			crossorigin="anonymous"></script>
+		<script type="text/javascript" src="api/ajaxFetch.js"></script>
 
-	<script type="text/javascript">
+		<script type="text/javascript">
 		$(document).ready(function() {
 			$('#sidebarCollapse').on('click', function() {
 				$('#sidebar').toggleClass('active');
